// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en el <GifGrid /> debe mostrar items cuando se cargan imagenes useFecthGifs 1`] = `
<Fragment>
  <h3
    className="animate__fadeInLeft"
  >
    Dragon Ball
  </h3>
  <div
    className="card-grid animate__slideInDown"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Cualquier cosa"
      url="https://localhost/cualquier/cosa.jpg"
    />
  </div>
</Fragment>
`;

exports[`Pruebas en el <GifGrid /> debe mostrarse correctamente  1`] = `
<Fragment>
  <h3
    className="animate__fadeInLeft"
  >
    Dragon Ball
  </h3>
  <p>
    loading
  </p>
  <div
    className="card-grid animate__slideInDown"
  />
</Fragment>
`;
